--- a/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_1.ipynb
+++ b/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_1.ipynb
@@ -18,17 +18,191 @@
     "# Write your code from here\n",
     "https://github.com/amruthareddy-zenV/AI_DATA_ANALYSIS_"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading the Titanic dataset...\n",
+      "Dataset loaded successfully.\n",
+      "\n",
+      "First 5 rows of the dataset:\n",
+      "   PassengerId  Survived  Pclass  \\\n",
+      "0            1         0       3   \n",
+      "1            2         1       1   \n",
+      "2            3         1       3   \n",
+      "3            4         1       1   \n",
+      "4            5         0       3   \n",
+      "\n",
+      "                                                Name     Sex   Age  SibSp  \\\n",
+      "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
+      "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+      "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
+      "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+      "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+      "\n",
+      "   Parch            Ticket     Fare Cabin Embarked  \n",
+      "0      0         A/5 21171   7.2500   NaN        S  \n",
+      "1      0          PC 17599  71.2833   C85        C  \n",
+      "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
+      "3      0            113803  53.1000  C123        S  \n",
+      "4      0            373450   8.0500   NaN        S  \n",
+      "\n",
+      "--- Identifying Missing Values ---\n",
+      "Columns with missing values:\n",
+      "          Missing Count  Missing Percentage (%)\n",
+      "Cabin               687               77.104377\n",
+      "Age                 177               19.865320\n",
+      "Embarked              2                0.224467\n",
+      "\n",
+      "--- Handling Missing Values ---\n",
+      "Missing 'Age' values imputed with the median: 28.00\n",
+      "Missing 'Embarked' values imputed with the mode: 'S'\n",
+      "Dropped 'Cabin' column due to a high percentage of missing values.\n",
+      "\n",
+      "--- Verifying Missing Values After Cleaning ---\n",
+      "All specified missing values have been handled.\n",
+      "\n",
+      "Cleaned dataset info:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   PassengerId  891 non-null    int64  \n",
+      " 1   Survived     891 non-null    int64  \n",
+      " 2   Pclass       891 non-null    int64  \n",
+      " 3   Name         891 non-null    object \n",
+      " 4   Sex          891 non-null    object \n",
+      " 5   Age          891 non-null    float64\n",
+      " 6   SibSp        891 non-null    int64  \n",
+      " 7   Parch        891 non-null    int64  \n",
+      " 8   Ticket       891 non-null    object \n",
+      " 9   Fare         891 non-null    float64\n",
+      " 10  Embarked     891 non-null    object \n",
+      "dtypes: float64(2), int64(5), object(4)\n",
+      "memory usage: 76.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Define the URL for the raw Titanic train.csv dataset\n",
+    "# This URL points to a publicly available Titanic dataset on GitHub.\n",
+    "titanic_url = \"https://raw.githubusercontent.com/dsindy/kaggle-titanic/master/data/train.csv\"\n",
+    "\n",
+    "print(\"Loading the Titanic dataset...\")\n",
+    "try:\n",
+    "    # Load the dataset into a pandas DataFrame\n",
+    "    df = pd.read_csv(titanic_url)\n",
+    "    print(\"Dataset loaded successfully.\")\n",
+    "    print(\"\\nFirst 5 rows of the dataset:\")\n",
+    "    print(df.head())\n",
+    "\n",
+    "    print(\"\\n--- Identifying Missing Values ---\")\n",
+    "    # Calculate the number of missing values for each column\n",
+    "    missing_values = df.isnull().sum()\n",
+    "    # Calculate the percentage of missing values for each column\n",
+    "    missing_percentage = (df.isnull().sum() / len(df)) * 100\n",
+    "\n",
+    "    # Create a DataFrame to display missing values count and percentage\n",
+    "    missing_info = pd.DataFrame({\n",
+    "        'Missing Count': missing_values,\n",
+    "        'Missing Percentage (%)': missing_percentage\n",
+    "    })\n",
+    "    # Filter to show only columns with missing values\n",
+    "    missing_info = missing_info[missing_info['Missing Count'] > 0].sort_values(\n",
+    "        by='Missing Count', ascending=False\n",
+    "    )\n",
+    "\n",
+    "    if not missing_info.empty:\n",
+    "        print(\"Columns with missing values:\")\n",
+    "        print(missing_info)\n",
+    "    else:\n",
+    "        print(\"No missing values found in the dataset.\")\n",
+    "\n",
+    "    print(\"\\n--- Handling Missing Values ---\")\n",
+    "\n",
+    "    # Strategy 1: Impute 'Age' with the median\n",
+    "    # 'Age' is a numerical column. Median is preferred over mean for skewed distributions.\n",
+    "    if 'Age' in df.columns and df['Age'].isnull().any():\n",
+    "        median_age = df['Age'].median()\n",
+    "        df['Age'].fillna(median_age, inplace=True)\n",
+    "        print(f\"Missing 'Age' values imputed with the median: {median_age:.2f}\")\n",
+    "    else:\n",
+    "        print(\"'Age' column not found or has no missing values.\")\n",
+    "\n",
+    "    # Strategy 2: Impute 'Embarked' with the mode (most frequent value)\n",
+    "    # 'Embarked' is a categorical column. Mode is suitable for categorical imputation.\n",
+    "    if 'Embarked' in df.columns and df['Embarked'].isnull().any():\n",
+    "        mode_embarked = df['Embarked'].mode()[0] # .mode() can return multiple if ties, so take the first\n",
+    "        df['Embarked'].fillna(mode_embarked, inplace=True)\n",
+    "        print(f\"Missing 'Embarked' values imputed with the mode: '{mode_embarked}'\")\n",
+    "    else:\n",
+    "        print(\"'Embarked' column not found or has no missing values.\")\n",
+    "\n",
+    "    # Strategy 3: Drop 'Cabin' column due to a high percentage of missing values\n",
+    "    # 'Cabin' often has too many missing values to be meaningfully imputed.\n",
+    "    if 'Cabin' in df.columns:\n",
+    "        if df['Cabin'].isnull().sum() / len(df) > 0.7: # Example threshold for dropping\n",
+    "            df.drop('Cabin', axis=1, inplace=True)\n",
+    "            print(\"Dropped 'Cabin' column due to a high percentage of missing values.\")\n",
+    "        else:\n",
+    "            print(\"'Cabin' column exists but does not meet the threshold for dropping based on missing values.\")\n",
+    "    else:\n",
+    "        print(\"'Cabin' column not found.\")\n",
+    "\n",
+    "    print(\"\\n--- Verifying Missing Values After Cleaning ---\")\n",
+    "    # Verify the remaining missing values\n",
+    "    missing_values_after_cleaning = df.isnull().sum()\n",
+    "    missing_percentage_after_cleaning = (df.isnull().sum() / len(df)) * 100\n",
+    "\n",
+    "    missing_info_after_cleaning = pd.DataFrame({\n",
+    "        'Missing Count': missing_values_after_cleaning,\n",
+    "        'Missing Percentage (%)': missing_percentage_after_cleaning\n",
+    "    })\n",
+    "    missing_info_after_cleaning = missing_info_after_cleaning[\n",
+    "        missing_info_after_cleaning['Missing Count'] > 0\n",
+    "    ].sort_values(by='Missing Count', ascending=False)\n",
+    "\n",
+    "    if not missing_info_after_cleaning.empty:\n",
+    "        print(\"Columns with remaining missing values:\")\n",
+    "        print(missing_info_after_cleaning)\n",
+    "    else:\n",
+    "        print(\"All specified missing values have been handled.\")\n",
+    "\n",
+    "    print(\"\\nCleaned dataset info:\")\n",
+    "    df.info()\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred: {e}\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
