--- a/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_2.ipynb
+++ b/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_2.ipynb
@@ -16,17 +16,206 @@
    "source": [
     "# write your code from here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading the Adult Income dataset...\n",
+      "Dataset loaded successfully.\n",
+      "\n",
+      "First 5 rows of the dataset:\n",
+      "   age         workclass  fnlwgt  education  education-num  \\\n",
+      "0   39         State-gov   77516  Bachelors             13   \n",
+      "1   50  Self-emp-not-inc   83311  Bachelors             13   \n",
+      "2   38           Private  215646    HS-grad              9   \n",
+      "3   53           Private  234721       11th              7   \n",
+      "4   28           Private  338409  Bachelors             13   \n",
+      "\n",
+      "       marital-status         occupation   relationship   race     sex  \\\n",
+      "0       Never-married       Adm-clerical  Not-in-family  White    Male   \n",
+      "1  Married-civ-spouse    Exec-managerial        Husband  White    Male   \n",
+      "2            Divorced  Handlers-cleaners  Not-in-family  White    Male   \n",
+      "3  Married-civ-spouse  Handlers-cleaners        Husband  Black    Male   \n",
+      "4  Married-civ-spouse     Prof-specialty           Wife  Black  Female   \n",
+      "\n",
+      "   capital-gain  capital-loss  hours-per-week native-country income  \n",
+      "0          2174             0              40  United-States  <=50K  \n",
+      "1             0             0              13  United-States  <=50K  \n",
+      "2             0             0              40  United-States  <=50K  \n",
+      "3             0             0              40  United-States  <=50K  \n",
+      "4             0             0              40           Cuba  <=50K  \n",
+      "\n",
+      "--- Initial Data Information ---\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 32561 entries, 0 to 32560\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   age             32561 non-null  int64 \n",
+      " 1   workclass       30725 non-null  object\n",
+      " 2   fnlwgt          32561 non-null  int64 \n",
+      " 3   education       32561 non-null  object\n",
+      " 4   education-num   32561 non-null  int64 \n",
+      " 5   marital-status  32561 non-null  object\n",
+      " 6   occupation      30718 non-null  object\n",
+      " 7   relationship    32561 non-null  object\n",
+      " 8   race            32561 non-null  object\n",
+      " 9   sex             32561 non-null  object\n",
+      " 10  capital-gain    32561 non-null  int64 \n",
+      " 11  capital-loss    32561 non-null  int64 \n",
+      " 12  hours-per-week  32561 non-null  int64 \n",
+      " 13  native-country  31978 non-null  object\n",
+      " 14  income          32561 non-null  object\n",
+      "dtypes: int64(6), object(9)\n",
+      "memory usage: 3.7+ MB\n",
+      "\n",
+      "--- Handling Missing Values (if any) ---\n",
+      "Columns with missing values (before cleaning for bias analysis):\n",
+      "                Missing Count  Missing Percentage (%)\n",
+      "occupation               1843                5.660146\n",
+      "workclass                1836                5.638647\n",
+      "native-country            583                1.790486\n",
+      "\n",
+      "Rows with missing values have been dropped for cleaner analysis.\n",
+      "\n",
+      "--- Analyzing Gender Distribution Across Income Levels ---\n",
+      "\n",
+      "Absolute counts of gender across income levels:\n",
+      "income  <=50K  >50K\n",
+      "sex                \n",
+      "Female   8670  1112\n",
+      "Male    13984  6396\n",
+      "\n",
+      "Percentage of each gender within each income level:\n",
+      "income  <=50K   >50K\n",
+      "sex                 \n",
+      "Female  38.27  14.81\n",
+      "Male    61.73  85.19\n",
+      "\n",
+      "Percentage of income levels within each gender:\n",
+      "income  <=50K   >50K\n",
+      "sex                 \n",
+      "Female  88.63  11.37\n",
+      "Male    68.62  31.38\n",
+      "\n",
+      "--- Interpretation of Potential Bias ---\n",
+      "By examining the percentages above, we can observe the representation of 'Male' and 'Female' individuals in both income categories ('>50K' and '<=50K').\n",
+      "A significant difference in these percentages between genders for the '>50K' income level could indicate a representation bias.\n",
+      "For example, if a much higher percentage of males earn '>50K' compared to females, it suggests a potential bias in income distribution related to gender in this dataset.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Define the URL for the raw Adult Income training dataset\n",
+    "# This dataset is commonly used for classification tasks related to income prediction.\n",
+    "adult_income_url = \"https://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.data\"\n",
+    "\n",
+    "# Define the column names as the dataset does not have a header row\n",
+    "# These column names are standard for the Adult Income dataset.\n",
+    "column_names = [\n",
+    "    'age', 'workclass', 'fnlwgt', 'education', 'education-num',\n",
+    "    'marital-status', 'occupation', 'relationship', 'race', 'sex',\n",
+    "    'capital-gain', 'capital-loss', 'hours-per-week', 'native-country', 'income'\n",
+    "]\n",
+    "\n",
+    "print(\"Loading the Adult Income dataset...\")\n",
+    "try:\n",
+    "    # Load the dataset into a pandas DataFrame\n",
+    "    # 'sep=\", \"' specifies the separator, and 'engine=\"python\"' handles the regex-like separator.\n",
+    "    # 'na_values=[\" ?\"]' tells pandas to treat ' ?' as missing values (NaN).\n",
+    "    df = pd.read_csv(adult_income_url, sep=\", \", header=None, names=column_names, na_values=[\"?\"], engine='python')\n",
+    "    print(\"Dataset loaded successfully.\")\n",
+    "    print(\"\\nFirst 5 rows of the dataset:\")\n",
+    "    print(df.head())\n",
+    "\n",
+    "    print(\"\\n--- Initial Data Information ---\")\n",
+    "    df.info()\n",
+    "\n",
+    "    print(\"\\n--- Handling Missing Values (if any) ---\")\n",
+    "    # Identify missing values after loading\n",
+    "    missing_values = df.isnull().sum()\n",
+    "    missing_info = pd.DataFrame({\n",
+    "        'Missing Count': missing_values,\n",
+    "        'Missing Percentage (%)': (missing_values / len(df)) * 100\n",
+    "    })\n",
+    "    missing_info = missing_info[missing_info['Missing Count'] > 0].sort_values(\n",
+    "        by='Missing Count', ascending=False\n",
+    "    )\n",
+    "\n",
+    "    if not missing_info.empty:\n",
+    "        print(\"Columns with missing values (before cleaning for bias analysis):\")\n",
+    "        print(missing_info)\n",
+    "        # For the purpose of bias analysis on 'sex' and 'income',\n",
+    "        # we will drop rows with missing values in these specific columns if any,\n",
+    "        # or in general, for simplicity, drop rows with any missing values.\n",
+    "        # In a real-world scenario, more sophisticated imputation might be used.\n",
+    "        df.dropna(inplace=True)\n",
+    "        print(\"\\nRows with missing values have been dropped for cleaner analysis.\")\n",
+    "    else:\n",
+    "        print(\"No missing values found in the dataset.\")\n",
+    "\n",
+    "    # Strip whitespace from categorical columns, especially 'sex' and 'income'\n",
+    "    # This is a common issue with datasets loaded from text files.\n",
+    "    for col in ['sex', 'income']:\n",
+    "        if col in df.columns and df[col].dtype == 'object':\n",
+    "            df[col] = df[col].str.strip()\n",
+    "\n",
+    "    print(\"\\n--- Analyzing Gender Distribution Across Income Levels ---\")\n",
+    "\n",
+    "    # Use crosstab to get the frequency distribution of 'sex' across 'income' levels\n",
+    "    gender_income_distribution = pd.crosstab(df['sex'], df['income'])\n",
+    "    print(\"\\nAbsolute counts of gender across income levels:\")\n",
+    "    print(gender_income_distribution)\n",
+    "\n",
+    "    # Calculate the percentage distribution for better understanding of bias\n",
+    "    # Normalize by column to see the percentage of each gender within each income bracket\n",
+    "    gender_income_percentage_by_income = pd.crosstab(df['sex'], df['income'], normalize='columns') * 100\n",
+    "    print(\"\\nPercentage of each gender within each income level:\")\n",
+    "    print(gender_income_percentage_by_income.round(2)) # Round to 2 decimal places\n",
+    "\n",
+    "    # Calculate the percentage distribution to see the income distribution for each gender\n",
+    "    gender_income_percentage_by_gender = pd.crosstab(df['sex'], df['income'], normalize='index') * 100\n",
+    "    print(\"\\nPercentage of income levels within each gender:\")\n",
+    "    print(gender_income_percentage_by_gender.round(2)) # Round to 2 decimal places\n",
+    "\n",
+    "    print(\"\\n--- Interpretation of Potential Bias ---\")\n",
+    "    print(\"By examining the percentages above, we can observe the representation of 'Male' and 'Female' individuals in both income categories ('>50K' and '<=50K').\")\n",
+    "    print(\"A significant difference in these percentages between genders for the '>50K' income level could indicate a representation bias.\")\n",
+    "    print(\"For example, if a much higher percentage of males earn '>50K' compared to females, it suggests a potential bias in income distribution related to gender in this dataset.\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred: {e}\")\n",
+    "    print(\"Please ensure the dataset URL is correct and accessible.\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
