--- a/src/Module 10/Best Practices for Feature Engineering & Data Preprocessing/Ques_2.ipynb
+++ b/src/Module 10/Best Practices for Feature Engineering & Data Preprocessing/Ques_2.ipynb
@@ -16,17 +16,83 @@
    "source": [
     "# write your code from here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.97\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Load dataset\n",
+    "iris = load_iris()\n",
+    "X = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
+    "y = iris.target\n",
+    "\n",
+    "# Introduce missing values artificially\n",
+    "rng = np.random.RandomState(0)\n",
+    "missing_rate = 0.1\n",
+    "n_missing_samples = int(np.floor(missing_rate * X.size))\n",
+    "\n",
+    "missing_features = rng.randint(0, X.shape[1], n_missing_samples)\n",
+    "missing_samples = rng.randint(0, X.shape[0], n_missing_samples)\n",
+    "X.values[missing_samples, missing_features] = np.nan\n",
+    "\n",
+    "# Train/test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Define pipeline\n",
+    "pipeline = Pipeline([\n",
+    "    ('imputer', SimpleImputer(strategy='mean')),   # Impute missing values\n",
+    "    ('scaler', StandardScaler()),                  # Feature scaling\n",
+    "    ('classifier', RandomForestClassifier(random_state=42))  # Classification model\n",
+    "])\n",
+    "\n",
+    "# Train the pipeline\n",
+    "pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict and evaluate\n",
+    "y_pred = pipeline.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "print(f\"Test Accuracy: {accuracy:.2f}\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
