--- a/src/Module 10/Best Practices for Feature Engineering & Data Preprocessing/Ques_2.ipynb
+++ b/src/Module 10/Best Practices for Feature Engineering & Data Preprocessing/Ques_2.ipynb
@@ -19,15 +19,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "..\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 2 tests in 0.117s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Test Accuracy: 0.97\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.main.TestProgram at 0x7c8d773691b0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -40,39 +61,86 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.metrics import accuracy_score\n",
+    "import unittest\n",
     "\n",
-    "# Load dataset\n",
-    "iris = load_iris()\n",
-    "X = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
-    "y = iris.target\n",
+    "# Load and prepare data with error handling\n",
+    "try:\n",
+    "    # Load dataset\n",
+    "    iris = load_iris()\n",
+    "    X = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
+    "    y = iris.target\n",
     "\n",
-    "# Introduce missing values artificially\n",
-    "rng = np.random.RandomState(0)\n",
-    "missing_rate = 0.1\n",
-    "n_missing_samples = int(np.floor(missing_rate * X.size))\n",
+    "    # Introduce some artificial missing values\n",
+    "    rng = np.random.RandomState(0)\n",
+    "    missing_rate = 0.1\n",
+    "    n_missing_samples = int(np.floor(missing_rate * X.size))\n",
+    "    missing_features = rng.randint(0, X.shape[1], n_missing_samples)\n",
+    "    missing_samples = rng.randint(0, X.shape[0], n_missing_samples)\n",
+    "    X.values[missing_samples, missing_features] = np.nan\n",
     "\n",
-    "missing_features = rng.randint(0, X.shape[1], n_missing_samples)\n",
-    "missing_samples = rng.randint(0, X.shape[0], n_missing_samples)\n",
-    "X.values[missing_samples, missing_features] = np.nan\n",
+    "except Exception as e:\n",
+    "    print(f\"Data loading or preprocessing failed: {e}\")\n",
+    "    exit()\n",
     "\n",
-    "# Train/test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "# Split dataset into training and test sets\n",
+    "try:\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "except Exception as e:\n",
+    "    print(f\"Train-test split failed: {e}\")\n",
+    "    exit()\n",
     "\n",
-    "# Define pipeline\n",
+    "# Create ML pipeline\n",
     "pipeline = Pipeline([\n",
-    "    ('imputer', SimpleImputer(strategy='mean')),   # Impute missing values\n",
-    "    ('scaler', StandardScaler()),                  # Feature scaling\n",
-    "    ('classifier', RandomForestClassifier(random_state=42))  # Classification model\n",
+    "    ('imputer', SimpleImputer(strategy='mean')),        # Handle missing values\n",
+    "    ('scaler', StandardScaler()),                       # Feature scaling\n",
+    "    ('classifier', RandomForestClassifier(random_state=42))  # Classifier\n",
     "])\n",
     "\n",
-    "# Train the pipeline\n",
-    "pipeline.fit(X_train, y_train)\n",
+    "# Fit model\n",
+    "try:\n",
+    "    pipeline.fit(X_train, y_train)\n",
+    "except Exception as e:\n",
+    "    print(f\"Pipeline training failed: {e}\")\n",
+    "    exit()\n",
     "\n",
     "# Predict and evaluate\n",
-    "y_pred = pipeline.predict(X_test)\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "try:\n",
+    "    y_pred = pipeline.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    print(f\"Test Accuracy: {accuracy:.2f}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Prediction or evaluation failed: {e}\")\n",
     "\n",
-    "print(f\"Test Accuracy: {accuracy:.2f}\")\n"
+    "# ----------------------------\n",
+    "# ✅ Unit Test to Validate Pipeline Behavior\n",
+    "# ----------------------------\n",
+    "class TestPipeline(unittest.TestCase):\n",
+    "    def test_imputer_handles_nan(self):\n",
+    "        # Should not throw errors with missing data\n",
+    "        test_data = pd.DataFrame({\n",
+    "            'feature1': [1, 2, np.nan],\n",
+    "            'feature2': [4, np.nan, 6],\n",
+    "            'feature3': [7, 8, 9],\n",
+    "            'feature4': [np.nan, 11, 12]\n",
+    "        })\n",
+    "        test_target = [0, 1, 0]\n",
+    "        pipeline.fit(test_data, test_target)\n",
+    "        predictions = pipeline.predict(test_data)\n",
+    "        self.assertEqual(len(predictions), 3)\n",
+    "\n",
+    "    def test_input_type_validation(self):\n",
+    "        with self.assertRaises(ValueError):\n",
+    "            # Introduce string in numeric column\n",
+    "            test_data = pd.DataFrame({\n",
+    "                'feature1': [1, 2, 'error'],\n",
+    "                'feature2': [4, 5, 6],\n",
+    "                'feature3': [7, 8, 9],\n",
+    "                'feature4': [10, 11, 12]\n",
+    "            })\n",
+    "            pipeline.fit(test_data, [0, 1, 0])\n",
+    "\n",
+    "# Run the unit tests\n",
+    "unittest.main(argv=[''], exit=False)\n"
    ]
   }
  ],
