--- a/src/Module 10/Best Practices for Feature Engineering & Data Preprocessing/Ques_6.ipynb
+++ b/src/Module 10/Best Practices for Feature Engineering & Data Preprocessing/Ques_6.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_boston\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimpute\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SimpleImputer, KNNImputer\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StandardScaler, MinMaxScaler, RobustScaler\n",
+      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_boston\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimpute\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SimpleImputer, KNNImputer\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StandardScaler, MinMaxScaler, RobustScaler\n",
       "File \u001b[0;32m~/.local/lib/python3.10/site-packages/sklearn/datasets/__init__.py:161\u001b[0m, in \u001b[0;36m__getattr__\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m    110\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mload_boston\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m    111\u001b[0m     msg \u001b[38;5;241m=\u001b[39m textwrap\u001b[38;5;241m.\u001b[39mdedent(\n\u001b[1;32m    112\u001b[0m \u001b[38;5;250m        \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    113\u001b[0m \u001b[38;5;124;03m        `load_boston` has been removed from scikit-learn since version 1.2.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    159\u001b[0m \u001b[38;5;124;03m        \"\"\"\u001b[39;00m\n\u001b[1;32m    160\u001b[0m     )\n\u001b[0;32m--> 161\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(msg)\n\u001b[1;32m    162\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    163\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mglobals\u001b[39m()[name]\n",
       "\u001b[0;31mImportError\u001b[0m: \n`load_boston` has been removed from scikit-learn since version 1.2.\n\nThe Boston housing prices dataset has an ethical problem: as\ninvestigated in [1], the authors of this dataset engineered a\nnon-invertible variable \"B\" assuming that racial self-segregation had a\npositive impact on house prices [2]. Furthermore the goal of the\nresearch that led to the creation of this dataset was to study the\nimpact of air quality but it did not give adequate demonstration of the\nvalidity of this assumption.\n\nThe scikit-learn maintainers therefore strongly discourage the use of\nthis dataset unless the purpose of the code is to study and educate\nabout ethical issues in data science and machine learning.\n\nIn this special case, you can fetch the dataset from the original\nsource::\n\n    import pandas as pd\n    import numpy as np\n\n    data_url = \"http://lib.stat.cmu.edu/datasets/boston\"\n    raw_df = pd.read_csv(data_url, sep=\"\\s+\", skiprows=22, header=None)\n    data = np.hstack([raw_df.values[::2, :], raw_df.values[1::2, :2]])\n    target = raw_df.values[1::2, 2]\n\nAlternative datasets include the California housing dataset and the\nAmes housing dataset. You can load the datasets as follows::\n\n    from sklearn.datasets import fetch_california_housing\n    housing = fetch_california_housing()\n\nfor the California housing dataset and::\n\n    from sklearn.datasets import fetch_openml\n    housing = fetch_openml(name=\"house_prices\", as_frame=True)\n\nfor the Ames housing dataset.\n\n[1] M Carlisle.\n\"Racist data destruction?\"\n<https://medium.com/@docintangible/racist-data-destruction-113e3eff54a8>\n\n[2] Harrison Jr, David, and Daniel L. Rubinfeld.\n\"Hedonic housing prices and the demand for clean air.\"\nJournal of environmental economics and management 5.1 (1978): 81-102.\n<https://www.researchgate.net/publication/4974606_Hedonic_housing_prices_and_the_demand_for_clean_air>\n"
      ]
@@ -198,89 +198,124 @@
     "from sklearn.impute import SimpleImputer, KNNImputer\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler, RobustScaler\n",
     "from sklearn.feature_selection import VarianceThreshold, mutual_info_classif\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Task 1: Impute with Mean or Median using Boston Housing dataset\n",
-    "boston = load_boston()\n",
-    "X_boston = pd.DataFrame(boston.data, columns=boston.feature_names)\n",
-    "X_boston.iloc[0, 0] = np.nan  # Introduce missing value\n",
+    "# Utility: Safe Data Loader\n",
+    "def load_boston_dataset():\n",
+    "    try:\n",
+    "        data = load_boston()\n",
+    "        df = pd.DataFrame(data.data, columns=data.feature_names)\n",
+    "        df['TARGET'] = data.target\n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error loading Boston dataset: {e}\")\n",
+    "        return pd.DataFrame()\n",
     "\n",
-    "# Impute using mean\n",
-    "imputer_mean = SimpleImputer(strategy='mean')\n",
-    "X_boston_mean = pd.DataFrame(imputer_mean.fit_transform(X_boston), columns=X_boston.columns)\n",
+    "# Utility: Load Titanic with error handling\n",
+    "def load_titanic_dataset():\n",
+    "    try:\n",
+    "        url = \"https://raw.githubusercontent.com/datasciencedojo/datasets/master/titanic.csv\"\n",
+    "        df = pd.read_csv(url)\n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error loading Titanic dataset: {e}\")\n",
+    "        return pd.DataFrame()\n",
     "\n",
-    "# Task 2: Impute with Most Frequent using Titanic dataset\n",
-    "titanic_url = \"https://raw.githubusercontent.com/datasciencedojo/datasets/master/titanic.csv\"\n",
-    "titanic = pd.read_csv(titanic_url)\n",
-    "cat_cols = titanic.select_dtypes(include='object').columns\n",
+    "# Missing Value Imputation Functions\n",
+    "def impute_mean(df):\n",
+    "    try:\n",
+    "        imputer = SimpleImputer(strategy='mean')\n",
+    "        return pd.DataFrame(imputer.fit_transform(df), columns=df.columns)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Mean imputation failed: {e}\")\n",
+    "        return df\n",
     "\n",
-    "imputer_freq = SimpleImputer(strategy='most_frequent')\n",
-    "titanic[cat_cols] = imputer_freq.fit_transform(titanic[cat_cols])\n",
+    "def impute_most_frequent(df, categorical_columns):\n",
+    "    try:\n",
+    "        imputer = SimpleImputer(strategy='most_frequent')\n",
+    "        df[categorical_columns] = imputer.fit_transform(df[categorical_columns])\n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        print(f\"Mode imputation failed: {e}\")\n",
+    "        return df\n",
     "\n",
-    "# Task 3: Advanced Imputation - k-Nearest Neighbors\n",
-    "knn_imputer = KNNImputer(n_neighbors=3)\n",
-    "X_knn_imputed = pd.DataFrame(knn_imputer.fit_transform(X_boston), columns=X_boston.columns)\n",
+    "def impute_knn(df, n_neighbors=3):\n",
+    "    try:\n",
+    "        imputer = KNNImputer(n_neighbors=n_neighbors)\n",
+    "        return pd.DataFrame(imputer.fit_transform(df), columns=df.columns)\n",
+    "    except Exception as e:\n",
+    "        print(f\"KNN imputation failed: {e}\")\n",
+    "        return df\n",
     "\n",
-    "# Feature Scaling & Normalization\n",
+    "# Scaling Functions\n",
+    "def scale_standard(df):\n",
+    "    return pd.DataFrame(StandardScaler().fit_transform(df), columns=df.columns)\n",
     "\n",
-    "# Standardization\n",
-    "scaler_std = StandardScaler()\n",
-    "X_std = pd.DataFrame(scaler_std.fit_transform(X_boston_mean), columns=X_boston.columns)\n",
+    "def scale_minmax(df):\n",
+    "    return pd.DataFrame(MinMaxScaler().fit_transform(df), columns=df.columns)\n",
     "\n",
-    "# Min-Max Scaling\n",
-    "scaler_mm = MinMaxScaler()\n",
-    "X_mm = pd.DataFrame(scaler_mm.fit_transform(X_boston_mean), columns=X_boston.columns)\n",
+    "def scale_robust(df):\n",
+    "    return pd.DataFrame(RobustScaler().fit_transform(df), columns=df.columns)\n",
     "\n",
-    "# Robust Scaling\n",
-    "scaler_robust = RobustScaler()\n",
-    "X_robust = pd.DataFrame(scaler_robust.fit_transform(X_boston_mean), columns=X_boston.columns)\n",
+    "# Feature Selection\n",
+    "def remove_highly_correlated_features(df, threshold=0.9):\n",
+    "    corr_matrix = df.corr().abs()\n",
+    "    upper_tri = corr_matrix.where(np.triu(np.ones(corr_matrix.shape), k=1).astype(bool))\n",
+    "    to_drop = [column for column in upper_tri.columns if any(upper_tri[column] > threshold)]\n",
+    "    return df.drop(columns=to_drop)\n",
     "\n",
-    "# Feature Selection - Correlation\n",
-    "corr_matrix = X_boston_mean.corr().abs()\n",
-    "upper_tri = corr_matrix.where(np.triu(np.ones(corr_matrix.shape), k=1).astype(bool))\n",
-    "to_drop = [column for column in upper_tri.columns if any(upper_tri[column] > 0.9)]\n",
-    "X_uncorrelated = X_boston_mean.drop(columns=to_drop)\n",
+    "def select_by_mutual_info(df, target, threshold='median'):\n",
+    "    y = (target > np.median(target)).astype(int) if threshold == 'median' else target\n",
+    "    scores = mutual_info_classif(df, y)\n",
+    "    selected_cols = df.columns[scores > np.median(scores)]\n",
+    "    return df[selected_cols]\n",
     "\n",
-    "# Feature Selection - Mutual Information\n",
-    "# Convert Boston target to classification for MI (using median split)\n",
-    "y_boston = (boston.target > np.median(boston.target)).astype(int)\n",
-    "mi_scores = mutual_info_classif(X_boston_mean, y_boston)\n",
-    "mi_selected = X_boston_mean.columns[mi_scores > np.median(mi_scores)]\n",
-    "X_mi = X_boston_mean[mi_selected]\n",
+    "def apply_variance_threshold(df, threshold=0.01):\n",
+    "    selector = VarianceThreshold(threshold)\n",
+    "    return pd.DataFrame(selector.fit_transform(df), columns=df.columns[selector.get_support(indices=True)])\n",
     "\n",
-    "# Feature Selection - Variance Threshold\n",
-    "selector = VarianceThreshold(threshold=0.01)\n",
-    "X_var = selector.fit_transform(X_boston_mean)\n",
-    "X_var_df = pd.DataFrame(X_var, columns=X_boston_mean.columns[selector.get_support(indices=True)])\n",
+    "# ---------- MAIN EXECUTION ---------- #\n",
     "\n",
-    "# Display processed dataframes\n",
-    "print(\"Imputed with Mean (Boston):\")\n",
-    "print(X_boston_mean.head())\n",
+    "# Load datasets\n",
+    "boston_df = load_boston_dataset()\n",
+    "titanic_df = load_titanic_dataset()\n",
     "\n",
-    "print(\"\\nImputed with Most Frequent (Titanic - Categorical Columns):\")\n",
-    "print(titanic[cat_cols].head())\n",
+    "# Inject missing values\n",
+    "if not boston_df.empty:\n",
+    "    boston_df.iloc[0, 0] = np.nan\n",
     "\n",
-    "print(\"\\nkNN Imputation (Boston):\")\n",
-    "print(X_knn_imputed.head())\n",
+    "# Task 1: Mean Imputation\n",
+    "boston_imputed = impute_mean(boston_df.drop('TARGET', axis=1))\n",
     "\n",
-    "print(\"\\nStandardized Data (Boston):\")\n",
-    "print(X_std.head())\n",
+    "# Task 2: Most Frequent Imputation\n",
+    "titanic_imputed = impute_most_frequent(titanic_df.copy(), titanic_df.select_dtypes(include='object').columns)\n",
     "\n",
-    "print(\"\\nMin-Max Scaled Data (Boston):\")\n",
-    "print(X_mm.head())\n",
+    "# Task 3: KNN Imputation\n",
+    "boston_knn_imputed = impute_knn(boston_imputed)\n",
     "\n",
-    "print(\"\\nRobust Scaled Data (Boston):\")\n",
-    "print(X_robust.head())\n",
+    "# Scaling Tasks\n",
+    "boston_std = scale_standard(boston_imputed)\n",
+    "boston_minmax = scale_minmax(boston_imputed)\n",
+    "boston_robust = scale_robust(boston_imputed)\n",
     "\n",
-    "print(\"\\nAfter Correlation-based Feature Selection (Boston):\")\n",
-    "print(X_uncorrelated.head())\n",
+    "# Feature Selection Tasks\n",
+    "boston_uncorrelated = remove_highly_correlated_features(boston_imputed)\n",
+    "boston_mi_selected = select_by_mutual_info(boston_imputed, boston_df['TARGET'])\n",
+    "boston_variance = apply_variance_threshold(boston_imputed)\n",
     "\n",
-    "print(\"\\nAfter Mutual Information Feature Selection (Boston):\")\n",
-    "print(X_mi.head())\n",
+    "# Basic Verification/Unit Checks\n",
+    "assert not boston_std.isnull().values.any(), \"StandardScaler failed: NaNs present\"\n",
+    "assert not boston_minmax.isnull().values.any(), \"MinMaxScaler failed: NaNs present\"\n",
+    "assert not boston_robust.isnull().values.any(), \"RobustScaler failed: NaNs present\"\n",
     "\n",
-    "print(\"\\nAfter Variance Threshold Feature Selection (Boston):\")\n",
-    "print(X_var_df.head())\n"
+    "print(\"✅ All processing completed successfully. Data samples:\")\n",
+    "print(\"\\nMean Imputed Boston Data:\\n\", boston_imputed.head())\n",
+    "print(\"\\nMost Frequent Imputed Titanic Data:\\n\", titanic_imputed.select_dtypes(include='object').head())\n",
+    "print(\"\\nKNN Imputed Boston Data:\\n\", boston_knn_imputed.head())\n",
+    "print(\"\\nStandard Scaled Data:\\n\", boston_std.head())\n",
+    "print(\"\\nAfter Removing Correlated Features:\\n\", boston_uncorrelated.head())\n",
+    "print(\"\\nMutual Info Selected Features:\\n\", boston_mi_selected.head())\n",
+    "print(\"\\nVariance Thresholded Features:\\n\", boston_variance.head())\n"
    ]
   }
  ],
